--- a/app/views/user_accounts/registrations/new.html.erb
+++ b/app/views/user_accounts/registrations/new.html.erb
@@ -17,6 +17,12 @@
       <%= f.text_field :id_card, class: "form-control" %>
     </p>
   </div>
+  <div class="form-group d-none">
+    <p>
+      <%= f.label "Tipo de empleado", style: "display: block" %>
+      <%= f.text_field :role, readonly: true,class: "form-control" %>
+    </p>
+  </div>
   <div>
     <p>
       <%= f.label "Estado del empleado", style: "display: block" %>
@@ -24,11 +30,11 @@
     <div class="container mb-3">
       <div class="form-check">
         <%= f.label :status, "Activo", :value => "active" %>
-        <%= f.radio_button :status, "Activo", class: "form-check-input", type: "radio" %>
+        <%= f.radio_button :status, "Activo", :value => "active", class: "form-check-input", type: "radio" %>
       </div>
       <div class="form-check">
         <%= f.label :status, "Inactivo", :value => "inactive" %>
-        <%= f.radio_button :status, "Inactivo", class: "form-check-input", type: "radio", :checked => true %>
+        <%= f.radio_button :status, "Inactivo", :value => "inactive", class: "form-check-input", type: "radio", :checked => true %>
       </div>
     </div>
   </div>
