--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -6,7 +6,7 @@
     <h2 class="text-center">Solicitud <%= @request.id %></h2>
   </div>
   <div class="m-3">
-    <% if current_user_account.role == "employee" %>
+    <% if current_user_account.role == "worker" %>
       <div class="row">
         <%= render "/tasks/employee_views/employee_view" %>
       </div>
