Correcion de alineado de los checkbox en la vista de nuevo empleado

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1116,6 +1116,7 @@ input[type="submit"] {
 @media (min-width: 992px) {
     .input .input-form-check {
         flex-direction: row-reverse;
+        justify-content: flex-end;
     }    
 }
 
