--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,63 +1,22 @@
-<%= render 'requests/navigation' %>
-<div class="container mt-3 mb-3 p-4 border border-2 rounded-3">
-  <div class="row">
-    <h3 class="text-center">
-      <% case @status
-         when "in_process" %> Solicitudes en Proceso
-      <% when "completed" %> Solicitudes Finalizadas
-      <% when "closed" %> Solicitudes Cerradas
-      <% when "denied" %> Solicitudes Rechazadas
-      <% else %> Solicitudes Pendientes
-      <% end %>
-    </h3>
-  </div>
-  <div class="row">
-    <div class="container">
-      <% if @requests.first.nil? %>
-        <p class="text-center">No hay solicitudes para mostrar</p>
-      <% else %>
-        <table class="table table-hover table-sm">
-          <thead>
-          <tr>
-            <th class="table-header text-center" scope="col">Consecutivo</th>
-            <th class="table-header text-center" scope="col">Fecha solicitud</th>
-            <th class="table-header text-center" scope="col">Edificio</th>
-            <th class="table-header text-center" scope="col">Sitio</th>
-            <th class="table-header text-center" scope="col">Solicitante</th>
-            <th class="table-header text-center" scope="col">Acciones</th>
-          </tr>
-          </thead>
-          <tbody>
-          <% @requests.each do |request| %>
-            <tr>
-              <td class="text-center" scope="row"><%= request.id %></td>
-              <td class="text-center"><%= request.created_at.strftime("%d/%m/%Y") %></td>
-              <td class="text-center">
-                <% if !@dictionary.workBuildings[request.work_building.to_sym].nil? %>
-                  <%= @dictionary.workBuildings[request.work_building.to_sym] %>
-                <% else %>
-                  <%= request.work_building %>
-                <% end %></td>
-              <td class="text-center"><%= request.work_location %></td>
-              <td class="text-center"><%= request.requester_name %></td>
-              <td class="text-center">
-                <div class="btn-group">
-                  <%= link_to request, class: "btn btn-sm btn-primary" do %>
-                    <i class="bi bi-eye"></i>
-                    Ver
-                  <% end %>
-                  <% if current_user_account.role == "admin" %>
-                    <%= render "requests/admin_views/admin_request_actions", request: request %>
-                  <% else %>
-                    <%= render "requests/employee_views/employee_request_actions", request: request %>
-                  <% end %>
-                </div>
-              </td>
-            </tr>
-          <% end %>
-          </tbody>
-        </table>
-      <% end %>
+<main class="main main-form container">
+  <h1 class="text-center mb-5 uppercase">Lista de solicitudes</h1>
+
+  <div class="list-content">
+    <%= render 'requests/navigation' %>
+
+    <div class="request-list-border" style="background-color: var(--light-color-hover);">
+      <h3 class="fw-bold pt-5 pb-4 fs-rg text-center">
+        <% case @status
+          when "in_process" %> Solicitudes en Proceso
+        <% when "completed" %> Solicitudes Finalizadas
+        <% when "closed" %> Solicitudes Cerradas
+        <% when "denied" %> Solicitudes Rechazadas
+        <% else %> Solicitudes Pendientes
+        <% end %>
+      </h3>
+    </div>
+    <div class="request-list-table">
+        <%= render partial: 'request_list', locals: {requests: @requests} %>
     </div>
   </div>
-</div>
+</main>
