--- a/app/views/requests/_navigation.html.erb
+++ b/app/views/requests/_navigation.html.erb
@@ -1,21 +1,21 @@
 <ul class="nav nav-tabs" role="tablist">
   <% if current_user_account.role == "admin" %>
-    <li class="nav-item" role="presentation">
-      <%= link_to "Pendientes", requests_path(:status => "pending"), class:(@status == "pending" ? "nav-link active" : "nav-link"), data: {"toggle" => "tab"} %>
+    <li class="nav-item-tab" role="presentation">
+      <%= link_to "Pendientes", requests_path(:status => "pending"), class:(@status == "pending" ? "nav-link link-active" : "nav-link"), data: {"toggle" => "tab"} %>
     </li>
   <% end %>
-  <li class="nav-item" role="presentation">
-    <%= link_to (current_user_account.role == "admin" ? "En Proceso" : "Asignados"), requests_path(:status => "in_process"), class:(@status == "in_process" ? "nav-link active" : "nav-link") %>
+  <li class="nav-item-tab" role="presentation">
+    <%= link_to (current_user_account.role == "admin" ? "En Proceso" : "Asignados"), requests_path(:status => "in_process"), class:(@status == "in_process" ? "nav-link link-active" : "nav-link") %>
   </li>
-  <li class="nav-item" role="presentation">
-    <%= link_to "Finalizadas", requests_path(:status => "completed"), class:(@status == "completed" ? "nav-link active" : "nav-link") %>
+  <li class="nav-item-tab" role="presentation">
+    <%= link_to "Finalizadas", requests_path(:status => "completed"), class:(@status == "completed" ? "nav-link link-active" : "nav-link") %>
   </li>
-  <li class="nav-item" role="presentation">
-    <%= link_to "Cerradas", requests_path(:status => "closed"), class:(@status == "closed" ? "nav-link active" : "nav-link") %>
+  <li class="nav-item-tab" role="presentation">
+    <%= link_to "Cerradas", requests_path(:status => "closed"), class:(@status == "closed" ? "nav-link link-active" : "nav-link") %>
   </li>
   <% if current_user_account.role == "admin" %>
-    <li class="nav-item" role="presentation">
-      <%= link_to "Rechazadas", requests_path(:status => "denied"), class:(@status == "denied" ? "nav-link active" : "nav-link") %>
+    <li class="nav-item-tab" role="presentation">
+      <%= link_to "Rechazadas", requests_path(:status => "denied"), class:(@status == "denied" ? "nav-link link-active" : "nav-link") %>
     </li>
   <% end %>
 </ul>
