--- a/app/views/requests/_request_list.html.erb
+++ b/app/views/requests/_request_list.html.erb
@@ -1,9 +1,11 @@
 <% if @requests.first.nil? %>
-  <p  class="text-center">No hay solicitudes para mostrar</p>
+  <div class="text-center py-5 custom-border">
+    <p class="fst-italic fs-sm"><i class="bi bi-info-circle"></i>&nbsp;&nbsp;No hay solicitudes para mostrar</p>
+  </div>
 <% else %>
-  <table class="table table-hover table-bordered">
+  <table class="table table-bordered">
     <thead>
-      <tr style="background-color: #D9D9D9;" class="text-center">
+      <tr style="background-color: var(--light-color-hover);" class="text-center custom-border">
         <th>Número</th>
         <th>Fecha</th>
         <th class="tablet-display">Edifio</th>
@@ -15,7 +17,7 @@
 
     <tbody>
       <% @requests.each do |request| %>
-        <tr class="text-center">
+        <tr class="text-center custom-border">
           <td class="py-3"><%= request.id %></td>
           <td class="py-3"><%= request.created_at.strftime("%d/%m/%Y") %></td>
           <td class="py-3 tablet-display">
