--- a/app/views/requests/admin_views/_admin_request_actions.html.erb
+++ b/app/views/requests/admin_views/_admin_request_actions.html.erb
@@ -1,13 +1,17 @@
 <% case request.status
    when "pending" %>
-<%= link_to change_status_request_path(request), class: "btn-default btn-submit" do %>
+
+<%= link_to "Atender", change_status_request_path(request), class: "btn-default btn-submit desktop-display" %>
+<%= link_to change_status_request_path(request), class: "btn-default btn-submit mobile-display" do %>
   <i class="bi bi-pencil-square"></i>
-  Atender
 <% end %>
-<%= link_to edit_request_path(request), class: "btn-default btn-submit" do %>
+
+<%= link_to "Rechazar", edit_request_path(request), class: "btn-default btn-danger desktop-display" %>
+<%= link_to edit_request_path(request), class: "btn-default btn-danger mobile-display" do %>
   <i class="bi bi-x-square"></i>
-  Rechazar
 <% end %>
+
+
 <% when "in_process" %>
 <%= link_to "Editar", edit_task_path(:request => request.id), class: "btn-default btn-submit desktop-display" %>
 <%= link_to edit_task_path(:request => request.id), class: "btn-default btn-submit mobile-display" do %>
