--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,7 +49,7 @@
                                 Solicitudes
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <%= link_to "Listar", requests_path, class: "dropdown-item" %>
+                                <%= link_to "Listar", current_user_account.role == "admin" ? requests_path(:status => "pending") : requests_path(:status => "in_process"), class: "dropdown-item" %>
                                 <% if current_user_account.role == "admin" %>
                                     <%= link_to "Reportes", reports_path, method: "search", class: "dropdown-item" %>
                                 <% end %>
