--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -90,7 +90,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <%= link_to edit_user_account_registration_path, class: "dropdown-item" do %>
-                                        Administrar cuenta
+                                        Cambiar contraseña
                                     <% end %>
                                 </div>
                             </li>
