--- a/app/views/user_accounts/registrations/edit.html.erb
+++ b/app/views/user_accounts/registrations/edit.html.erb
@@ -1,42 +1,43 @@
-<div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <h1 class="text-center">Editar cuenta</h1>
-    </div>
+<main class="main">
+  <div class="container">
+    <%= render "user_accounts/shared/error_messages", resource: resource %>
   </div>
-  <div class="row">
-    <div class="d-grid gap-2">
-      <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-        <%= render "user_accounts/shared/error_messages", resource: resource %>
-        <div class="form-group">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", readonly: true  %>
-        </div>
-        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-        <% end %>
-        <div class="form-group">
-          <%= f.label "Nueva contraseña" %> <i>(Dejar en blanco si se no se desea actualizar)</i><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-          <% if @minimum_password_length %>
-            <br />
-            <em><%= @minimum_password_length %> caracteres mínimos</em>
-          <% end %>
-        </div>
-        <div class="form-group">
-          <%= f.label "Confirmación de la nueva contraseña" %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <%= f.label "Contraseña actual" %> <i>(Se necesita la contraseña actual para actualizar los datos)</i><br />
-          <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
-        </div>
-        <br>
-        <div class="actions form-group">
-          <%= f.submit "Actualizar información", class: "btn btn-primary" %>
-        </div>
-      <% end %>
-      <%= link_to "Volver", :back %>
-    </div>
+
+  <div class="container main-form form-pad-lg bg-mandala">
+    <h1 class="mb-5 uppercase">Cambiar contraseña</h1>
+
+    <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+
+      <div class="input input-50">
+        <%= f.label "Correo electrónico" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", readonly: true  %>
+      </div>
+
+      <!--<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div class="input input-50">
+            <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+          </div>
+      <% end %>-->
+
+      <div class="input input-50">
+        <%= f.label "Nueva contraseña" %> <span class="text-danger">*</span>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Nueva contraseña"%>
+      </div>
+
+      <div class="input input-50">
+        <%= f.label "Confirme la nueva contraseña"%> <span class="text-danger">*</span>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirme la nueva contraseña" %>
+      </div>
+
+      <div class="input input-50">
+        <%= f.label "Contraseña actual" %> <span class="text-danger">*</span>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Contraseña actual"%>
+      </div>
+
+      <div class="button-group form-buttons mt-5">
+        <%= f.submit "Actualizar", class: "btn-default btn-submit" %>
+        <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
+      </div>
+    <% end %>
   </div>
-</div>
+</main>
