--- a/app/views/user_accounts/registrations/edit.html.erb
+++ b/app/views/user_accounts/registrations/edit.html.erb
@@ -36,7 +36,7 @@
 
       <div class="button-group form-buttons mt-5">
         <%= f.submit "Actualizar", class: "btn-default btn-submit" %>
-        <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
+        <%= link_to "Regresar", root_path, class: "btn-default btn-back" %>
       </div>
     <% end %>
   </div>
