--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -219,6 +219,10 @@ input[type="submit"] {
     border-bottom: 1px solid #000 !important;
 }
 
+.mt-negative-1 {
+    margin-top: -1rem;
+}
+
 .responsive-divider {
     border-bottom: 1px solid var(--light-gray-hover);
     padding-bottom: 1.8rem;
@@ -1248,4 +1252,54 @@ table.table-bordered > thead > tr > th{
 
 .custom-border {
     border: 1px solid #cbcdcb;
+}
+
+/*-------------------------------
+------- WORKER/ADMIN LIST -------
+---------------------------------*/
+.status-flex {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+@media (min-width: 992px) {
+    .status-flex {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+}
+
+.status-form {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: .5rem;
+}
+
+.status-form .filters-title {
+    grid-column: 1 / 5;
+}
+
+.status-form .input {
+    grid-column: 1 / 4;
+    margin-bottom: 0 !important;
+}
+
+.status-form input[type="submit"] {
+    grid-column: 4 / 5;
+    height: 4.2rem;
+    margin-top: 3.6rem;
+}
+
+.status-flex .btn-submit {
+    width: 98%;
+    margin: 2.5rem auto 0rem;
+}
+
+@media (min-width: 992px) {
+    .status-flex .btn-submit {
+        height: 4.2rem;
+        margin: 0 0 5.2rem;
+        width: auto;
+    }
 }
