Reparando error filtrado por estados empleados/admins 1/2

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -8,7 +8,7 @@
     
       <div class="input">
           <%= f.label :employee_status, 'Estado' %>
-          <%= f.select :employee_status_eq, options_for_select(Employee.all.employee_statuses), {include_blank: "Estado"}, class: "form-select" %>
+          <%= f.select :employee_status_eq, options_for_select(Employee.all.employee_statuses), {include_blank: "Seleccione el estado"}, class: "form-select" %>
           <% f.text_field :employee_type_eq, value: @type %>
       </div>
 
