--- a/app/views/user_accounts/_employee_list.html.erb
+++ b/app/views/user_accounts/_employee_list.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td class="text-center"><%= employee.id_card %></td>
         <td class="text-center"><%= employee.name %></td>
-        <td class="text-center"><%= employee.status == 'active' ? 'Activo' : 'Inactivo' %></td>
+        <td class="text-center"><%= employee.status %></td>
         <td class="text-center">
           <div class="btn-group">
             <%= link_to employee, class: "btn btn-sm btn-primary" do %>
