Reparando error filtrado por estados empleados/admins 2/2

--- a/app/views/employees/_employee_list.html.erb
+++ b/app/views/employees/_employee_list.html.erb
@@ -35,9 +35,9 @@
               <% end %>
 
 
-              <%= link_to "Eliminar", employee, method: :delete,data: { turbo_method: :delete, turbo_confirm: "¿Desear eliminar este registro?" }, class: "btn-default btn-danger desktop-display"%>
+              <%= link_to "Eliminar", employee, method: :delete,data: { turbo_method: :delete, turbo_confirm: "¿Desea eliminar este registro?" }, class: "btn-default btn-danger desktop-display"%>
 
-              <%= link_to employee, method: :delete,data: { turbo_method: :delete, turbo_confirm: "¿Desear eliminar este registro?" }, class: "btn-default btn-danger mobile-display" do %>
+              <%= link_to employee, method: :delete,data: { turbo_method: :delete, turbo_confirm: "¿Desea eliminar este registro?" }, class: "btn-default btn-danger mobile-display" do %>
                 <i class="bi bi-trash"></i>
               <% end %>
             </div>    
