--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -23,15 +23,27 @@
 
     <div class="input">
       <%= form.label @employee.employee_type == 'Trabajador' ? 'Estado del empleado' : 'Estado del administrador' %>
+      
       <div class="input-form-check">
-        <div class="form-check">
-          <%= form.label :employee_status, "Activo", :value => "Activo" %>
-          <%= form.radio_button :employee_status, "Activo", class: "form-check-input", type: "radio" %>
-        </div>
-        <div class="form-check">
-          <%= form.label :employee_status, "Inactivo", :value => "Inactivo" %>
-          <%= form.radio_button :employee_status, "Inactivo", class: "form-check-input", type: "radio", :checked => true %>
-        </div>
+        <% if @employee.id != nil && @employee.employee_status == "Activo" %>
+          <div class="form-check">
+            <%= form.label :employee_status, "Activo", :value => "Activo" %>
+            <%= form.radio_button :employee_status, "Activo", class: "form-check-input", type: "radio", :checked => true %>
+          </div>
+          <div class="form-check">
+            <%= form.label :employee_status, "Inactivo", :value => "Inactivo" %>
+            <%= form.radio_button :employee_status, "Inactivo", class: "form-check-input", type: "radio" %>
+          </div>
+        <% else %>
+          <div class="form-check">
+            <%= form.label :employee_status, "Activo", :value => "Activo" %>
+            <%= form.radio_button :employee_status, "Activo", class: "form-check-input", type: "radio" %>
+          </div>
+          <div class="form-check">
+            <%= form.label :employee_status, "Inactivo", :value => "Inactivo" %>
+            <%= form.radio_button :employee_status, "Inactivo", class: "form-check-input", type: "radio", :checked => true %>
+          </div>
+        <% end %>
       </div>
     </div>
 
