--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,6 +1,4 @@
-<h1 class="text-center">Editar empleado</h1>
-<%= render "form", employee: @employee %>
-<br>
-<div class="btn-group">
-  <%= link_to "Volver a la lista de empleados", employees_path %>
-</div>
+<main class="main main-form bg-mandala container">
+  <h1 class="mb-5 uppercase">Editar <%= @employee.employee_type == "Trabajador" ? "empleado" : "administrador" %></h1>
+  <%= render "form", employee: @employee %>
+</main>
