--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,5 +1,10 @@
-<%= render @employee %>
-
-<div>
-  <%= link_to "Volver a la lista de empleados", employees_path %>
-</div>
+<main class="container main main-form">
+  <h1 class="mb-1 uppercase text-center">Información del <%= @employee.employee_type %></h1>
+  <hr class="mb-5">
+    
+  <%= render @employee %>
+  
+  <div>
+    <%= link_to "Regresar", :back, class: "btn-default btn-back" %>
+  </div>
+</main>
