--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <%= render "layouts/devise_notifications" %>
       <% end %>
       <%= yield %>
+      <%= render "shared/footer" %>
     </div>
 
     <script>
